--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -14,6 +14,10 @@
 		{
 			"src": "^\\/_image\\/?$",
 			"dest": "_render"
+		},
+		{
+			"src": "^\\/_server-islands\\/([^/]+?)\\/?$",
+			"dest": "_render"
 		}
 	]
 }
