--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -16,6 +16,10 @@
 			"dest": "_render"
 		},
 		{
+			"src": "^\\/$",
+			"dest": "_render"
+		},
+		{
 			"src": "^\\/_server-islands\\/([^/]+?)\\/?$",
 			"dest": "_render"
 		}
